--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
-    "mdsvex": "^0.11.0",
+    "mdsvex": "^0.12.6",
     "postcss": "^8.4.32",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0",
     "svelte": "^4.2.7",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.3"
   },
   "type": "module",
   "dependencies": {
-    "katex": "^0.16.22",
-    "rehype-katex": "^7.0.1",
-    "remark-math": "^6.0.0"
+    "katex": "^0.16.10"
   }
 }
